--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -273,6 +273,7 @@
                         android:layout_height="0dp"
                         android:layout_marginTop="40dp"
                         app:imgUrl="@{latestBadge.imageUrl}"
+                        app:imageUrlPreload="@{latestBadge.imageUrl}"
                         app:layout_constraintDimensionRatio="1"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
