--- a/app/src/main/res/layout/item_my_badge.xml
+++ b/app/src/main/res/layout/item_my_badge.xml
@@ -8,6 +8,7 @@
         <variable
             name="badge"
             type="com.sopt.smeem.domain.model.Badge" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,6 +22,7 @@
             android:id="@+id/img_my_badge"
             android:layout_width="100dp"
             android:layout_height="0dp"
+            app:imageUrlPreload="@{badge.imageUrl}"
             app:imgUrl="@{badge.imageUrl}"
             app:layout_constraintDimensionRatio="1"
             app:layout_constraintEnd_toEndOf="parent"
