윈도우 반투명 모드 적용

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,6 +16,8 @@
         <item name="colorOnSurface">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?android:colorBackground</item>
+        <!-- window background color -->
+        <item name="android:windowIsTranslucent">true</item>
 
         <!-- etc -->
         <item name="colorControlActivated">@color/point</item>
