--- a/app/src/main/res/layout/activity_display_training_goal.xml
+++ b/app/src/main/res/layout/activity_display_training_goal.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="training"
-            type="com.sopt.smeem.domain.model.TrainingGoal" />
+            type="com.sopt.smeem.domain.dto.TrainingGoalDto" />
 
     </data>
 
