--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="trainingGoal"
-            type="com.sopt.smeem.domain.model.TrainingGoal" />
+            type="com.sopt.smeem.domain.dto.TrainingGoalDto" />
 
         <variable
             name="latestBadge"
