SmeemAlarmCard에 DayClick 기능 구현

--- a/app/src/main/res/layout/activity_edit_training_time.xml
+++ b/app/src/main/res/layout/activity_edit_training_time.xml
@@ -9,7 +9,8 @@
 
         <variable
             name="vm"
-            type="com.sopt.smeem.presentation.mypage.EditTrainingTimeViewModel" />
+            type="com.sopt.smeem.presentation.mypage.setting.EditTrainingTimeViewModel" />
+
         <variable
             name="trainingTime"
             type="com.sopt.smeem.domain.model.TrainingTime" />
