앱 아이콘 background 변경 연두색 -> 흰색

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <!-- etc -->
     <color name="kakao">#FEE500</color>
     <color name="snackbar">#474747</color>
+    <color name="ic_smeem_background">#FFFFFF</color>
 </resources>
